--- a/package.json
+++ b/package.json
@@ -34,32 +34,32 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@babel/runtime": "^7.7.7",
-    "@tarojs/runtime": "3.4.8",
-    "@tarojs/taro": "3.4.8",
-    "@tarojs/components": "3.4.8",
-    "@tarojs/plugin-framework-react": "3.4.8",
-    "mobx": "^4.8.0",
-    "mobx-react": "^6.1.4",
-    "react-dom": "^17.0.0",
-    "@tarojs/react": "3.4.8",
-    "react": "^17.0.0"
+    "@babel/runtime": "^7.20.0",
+    "@tarojs/runtime": "3.6.20",
+    "@tarojs/taro": "3.6.20",
+    "@tarojs/components": "3.6.20",
+    "@tarojs/plugin-framework-react": "3.6.20",
+    "mobx": "^6.15.0",
+    "mobx-react": "^7.6.0",
+    "react-dom": "^18.2.0",
+    "@tarojs/react": "3.6.20",
+    "react": "^18.2.0"
   },
   "devDependencies": {
-    "@types/webpack-env": "^1.13.6",
-    "@types/react": "^17.0.2",
-    "@tarojs/mini-runner": "3.4.8",
-    "@babel/core": "^7.8.0",
-    "@tarojs/webpack-runner": "3.4.8",
-    "babel-preset-taro": "3.4.8",
-    "eslint-config-taro": "3.4.8",
-    "eslint": "^8.12.0",
-    "eslint-plugin-react": "^7.8.2",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "stylelint": "9.3.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "typescript": "^4.1.0"
+    "@types/webpack-env": "^1.18.0",
+    "@types/react": "^18.2.0",
+    "@tarojs/mini-runner": "3.6.20",
+    "@babel/core": "^7.22.0",
+    "@tarojs/webpack-runner": "3.6.20",
+    "babel-preset-taro": "3.6.20",
+    "eslint-config-taro": "3.6.20",
+    "eslint": "^8.48.0",
+    "eslint-plugin-react": "^7.33.0",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "stylelint": "^15.10.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "typescript": "^5.0.0"
   }
 }
